# app-gym

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  ruff.toml  run_api.ps1
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: fc0a6dcf8977_init_db.py
data/validation/: points.csv  report.json
data/validation_tmp/: points.csv  report.json
frontend/: vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: ScenarioCard.tsx
frontend/src/layout/: AppShell.tsx
frontend/src/lib/: storage.ts
frontend/src/pages/: Athlete.tsx  Exercises.tsx  History.tsx  Home.tsx  Ingest.tsx  NewSession.tsx  Routines.tsx  RunDetail.tsx
frontend/src/state/: athlete.ts
src/app/: main.py
src/app/auth/: deps.py  security.py  types.py
src/app/core/: config.py
src/app/db/: engine.py  models.py  models_auth.py  repo.py
src/coach_ai/e2e/: __init__.py  decision_log.py  runner.py  types.py  versioning.py
src/coach_ai_engineer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_health.py  test_placeholder_training_core.py
tests/e2e/: test_e2e_runner.py
tests/latents/: test_pipeline_latents.py  test_probability.py
tests/suggestions/: test_suggestions_engine.py
tests/training_core/: test_metrics.py  test_normalization.py  test_pipeline.py  test_validation.py
tests/trends/: test_classification.py  test_derivatives.py  test_smoothing.py  test_trends_pipeline.py
tests/validation/: test_simulated_validation.py
(+43 files in other folders)
